--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <!-- Copy this template -->
   <div class="container">
     <div class="card">
-      <img src="/pics/cat1.png" alt="Profile Photo">
+      <img src="/pics/download.jpg" alt="Profile Photo">
       <div class="info">
         <h2>Your Name</h2>
         <p>Your message goes here.</p>
